corrected end div to align the text box button

--- a/static/main.css
+++ b/static/main.css
@@ -145,7 +145,7 @@ header.masthead{
 .alert-message{
     text-align: center;
     z-index: 3041;
-    top: 10rem;
+    top: 6rem;
 }
 
 .navBar-btn a{
